--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Deepak Singh
+description: "A Master's in Data Science student at the University of San Francisco and currently a Data Science Intern at Boston Children's Hospital (Harvard Medical School). Graduating in June 2023."
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
@@ -7,3 +7,5 @@ theme: jekyll-theme-cayman
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+
