--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Deepak Singh
 description: |
-A Master''s in Data Science student at the University of San Francisco,
-and currently a Data Science Intern at Boston Children''s Hospital (Harvard Medical School). 
+A Master''s in Data Science student at the University of San Francisco, \n
+and currently a Data Science Intern at Boston Children''s Hospital (Harvard Medical School). \n
 Graduating in June 2023.
 show_downloads: true
 google_analytics:
